@scopatz went through the trouble, closes #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 sexual preference
-github only lets me fork, though I would really like to spoon
+# "github only lets me fork, though I would really like to spoon" -- @scopatz
+# "so say we all" -- @ivanov
